# advent-of-code

./: .gitignore  README.md  justfile
python/: pyproject.toml
python/src/_2015/: day_01_not_quite_lisp.py  day_02_i_was_told_there_would_be_no_math.py  day_03_perfectly_spherical_houses_in_a_vacuum.py  day_04_the_ideal_stocking_stuffer.py  day_05_doesnt_he_have_intern_elves_for_this.py  day_06_probably_a_fire_hazard.py  day_07_some_assembly_required.py  day_08_matchsticks.py  day_09_all_in_a_single_night.py  day_10_elves_look,_elves_say.py  day_10_elves_look_elves_say.py  day_11_corporate_policy.py  day_12_jsabacusframeworkio.py  day_13_knights_of_the_dinner_table.py  day_14_reindeer_olympics.py  day_15_science_for_hungry_people.py  day_16_aunt_sue.py  day_17_no_such_thing_as_too_much.py  day_18_like_a_gif_for_your_yard.py  day_19_medicine_for_rudolph.py  day_20_infinite_elves_and_infinite_houses.py  day_21_rpg_simulator_20xx.py  day_22_wizard_simulator_20xx.py  day_23_opening_the_turing_lock.py  day_24_it_hangs_in_the_balance.py  day_25_let_it_snow.py
python/src/_2016/: day_01_no_time_for_a_taxicab.py  day_02_bathroom_security.py  day_03_squares_with_three_sides.py  day_04_security_through_obscurity.py  day_05_how_about_a_nice_game_of_chess.py  day_06_signals_and_noise.py  day_07_internet_protocol_version_7.py  day_08_two_factor_authentication.py  day_09_explosives_in_cyberspace.py  day_10_balance_bots.py  day_11_radioisotope_thermoelectric_generators.py  day_12_leonardos_monorail.py  day_13_a_maze_of_twisty_little_cubicles.py  day_14_one_time_pad.py  day_15_timing_is_everything.py  day_16_dragon_checksum.py  day_17_two_steps_forward.py  day_18_like_a_rogue.py  day_19_an_elephant_named_joseph.py  day_20_firewall_rules.py  day_21_scrambled_letters_and_hash.py  day_22_grid_computing.py  day_23_safe_cracking.py  day_24_air_duct_spelunking.py  day_25_clock_signal.py
python/src/_2017/: day_01_inverse_captcha.py  day_02_corruption_checksum.py  day_03_spiral_memory.py  day_04_high_entropy_passphrases.py  day_05_a_maze_of_twisty_trampolines_all_alike.py  day_06_memory_reallocation.py  day_07_recursive_circus.py  day_08_i_heard_you_like_registers.py  day_09_stream_processing.py  day_10_knot_hash.py  day_11_hex_ed.py  day_12_digital_plumber.py  day_13_packet_scanners.py  day_14_disk_defragmentation.py  day_15_dueling_generators.py  day_16_permutation_promenade.py  (+9 more)
(+497 files in other folders)
