[project]
name = "aoc"
version = "0.1.0"
description = "Python package for the Advent of Code challenges"
readme = "../README.md"
authors = [
    { name = "Eertze van de Riet", email = "eertze.0@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "networkx>=3.5",
]

[project.scripts]
aoc = "aoc:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
